# mcp-sap-gui

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  README.md  diagnose_com.py  diagnose_v2.py  orchestrate.sh  pyproject.toml  requirements.txt  server.json  test_cli.py
.claude/commands/: sap-explore.md  sap-status.md  sap-table-dump.md
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: CLIENTS.md  OVERVIEW.md  TOOLS.md
examples/: basic_usage.py  sap_agent.py
src/mcp_sap_gui/: __init__.py  audit.py  controller.py  discovery.py  fields.py  prompts.py  sap_controller.py  server.py  session_manager.py  tables.py  trees.py
tests/: test_sap_controller.py  test_server.py  test_v02_verification_fingerprint.py
